# Option_pricing

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  main.cpp  main_example.cpp  option_former.cpp  option_former.h  option_pricer_description.docx  option_tests_former.cpp  project_struct.txt  simplified_project_struct.txt  ~$tion_pricer_description.docx
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  pr_ci.yml  push_ci.yml
bckp/: market_data_bckp.h  option_tests.cpp
bckp/github/: CONTRIBUTING.txt
bckp/github/workflows/: ci.txt
docs/: clean_build.txt  create_flattened_folder  project_structure.md
docs/git/: common_workflow_dev.txt  common_workflow_release.txt  test.txt
examples/: CMakeLists.txt  generate_sobol.cpp  sobol_sequence_5.csv
examples/notebooks/: Untitled.ipynb  sobol.ipynb
examples/output/: sequences_1.csv  sequences_2.csv  sequences_50.csv
ideas/: custome_excpetion-factory.txt
ideas/factories/: templated_factory.h
ideas/logger/: di_async.h  di_sync.h  singleton_async.h
ideas/monte_carlo/: mc_inherit_marketdata.h
include/: market_data.h  option.h  option.txt  payoff.h  payoff.txt  sss.h
include/market_data/: base_market_data.h  imarket_data.h  interface_market_data.h  market_data.h  market_data_observer.h  stock_data.h
include/model/: base_model.h  bates_model.h  gbm_model.h  heston_model.h  kou_model.h  merton_jump_diffusion_model.h  variance_gamma_model.h
include/model/discretization/: base_cir_discretization.h  explicit_euler_cir_discretization.h  milstein_cir_discretization.h
include/numerical_analysis/basis_function/: base_basis_function.h  chebyshev.h  laguerre.h  legendre.h  monomial.h
include/numerical_analysis/interpolation/: base_interpolation.h  linear_interpolation.h  quadratic_interpolation.h
include/numerical_analysis/regression/: base_regression.h  lasso.h  least_squares.h  ridge.h
include/option/: base_factory_option.h  base_option.h  factory_option.h  interface_option.h  parameter_object.h
include/option/factories/: base_option_factory.h
include/option/options/: base_option.h  sss.h
include/option/path_dependent/: american_option.h  asian_option.h  barrier_option.h  base_path_dependent_option.h  factory_american_option.h  factory_asian_option.h  factory_barrier_option.h  factory_lookback_option.h  lookback_option.h
include/option/single_path/: base_single_path_option.h  digital_option.h  double_digital_option.h  european_option.h  factory_digital_option.h  factory_double_digital_option.h  factory_european_option.h  factory_single_path_option.h
include/payoff/: base_payoff.h  factory_payoff.h  payoff_floating_strike_lookback.h
include/payoff/double_strikes/: base_payoff_double_strikes.h  factory_payoff_double_digital.h  factory_payoff_double_strikes.h  payoff_double_digital.h
include/payoff/single_strike/: base_payoff_digital.h  base_payoff_single_strike.h  base_payoff_vanilla.h  factory_payoff_digital.h  factory_payoff_single_strike.h  factory_payoff_vanilla.h  payoff_digital.h  payoff_digital_call.h  payoff_digital_put.h  payoff_vanilla.h  payoff_vanilla_call.h  payoff_vanilla_put.h
include/random/distribution/: base_distribution.h  continuous_uniform_distrib.h  exponential_distr.h  gamma_distrib.h  normal_distrib.h  poisson_distrib.h  standard_normal_distribution.h
include/random/number_generator/: base_generator.h  base_quasi_random_generator.h  faure_quasi_random_generator.h  pseudo_random_generator.h  random_generator.h  sobol_quasi_random_generator.h
include/solver/: base_solver.h
include/solver/monte_carlo/: base_mc.h  base_mc_path_dependent.h  gbm_stock_price_model.h  generator.h  mc_american.h  mc_asian.h  mc_barrier.h  mc_base_strategy.h  mc_lookback.h  mc_single_path.h  mc_solver.h  stock_price_model.h
include/solver/tree/: binomial_tree.h
src/: market_data.cpp  option.cpp  option.txt  payoff.cpp  payoff.txt  sss.cpp
src/market_data/: base_market_data.cpp  imarket_data.cpp  interface_market_data.cpp  market_data.cpp  market_data_observer.cpp  stock_data.cpp
src/model/: base_model.cpp  bates_model.cpp  gbm_model.cpp  heston_model.cpp  kou_model.cpp  merton_jump_diffusion_model.cpp  variance_gamma_model.cpp
src/model/discretization/: base_cir_discretization.cpp  explicit_euler_cir_discretization.cpp  milstein_cir_discretization.cpp
src/numerical_analysis/basis_function/: base_basis_function.cpp  chebyshev.cpp  laguerre.cpp  legendre.cpp  monomial.cpp
src/numerical_analysis/interpolation/: base_interpolation.cpp  linear_interpolation.cpp  quadratic_interpolation.cpp
src/numerical_analysis/regression/: base_regression.cpp  lasso.cpp  least_squares.cpp  ridge.cpp
src/option/: base_option.cpp  factory_option.cpp  interface_option.cpp  parameter_object.cpp
src/option/options/: base_option.cpp
src/payoff/: base_payoff.cpp  factory_payoff.cpp  payoff_floating_strike_lookback.cpp
src/solver/: base_solver.cpp
tests/: CMakeLists.txt  README.md  market_data_tests.cpp  mock_classes.h  option_tests.cpp  payoff_tests.cpp  test_market_data.cpp  test_option.cpp  test_payoff.cpp  test_support.h
tests/config/: test_support.h
tests/integration/: CMakeLists.txt  test_integration_option.cpp
tests/unit/: CMakeLists.txt  test_market_data.cpp  test_option.cpp  test_payoff.cpp
tests/unit/market_data/: test_market_data.cpp  test_stock_data.cpp
tests/unit/option/: test_base_option.cpp  test_factory_european_option.cpp
tests/unit/payoff/double_strikes/: test_payoff_double_digital.cpp
tests/unit/payoff/single_strike/: test_payoff_digital.cpp  test_payoff_digital_call.cpp  test_payoff_digital_put.cpp  test_payoff_vanilla.cpp  test_payoff_vanilla_call.cpp  test_payoff_vanilla_put.cpp
tests/unit/payoff/single_strike/digital/: test_payoff_digital_call.cpp  test_payoff_digital_put.cpp
tests/unit/payoff/single_strike/test_support/: common_payoff_single_strike_tests.h  fixture_payoff_single_strike.h
tests/unit/payoff/single_strike/vanilla/: test_payoff_vanilla_call.cpp  test_payoff_vanilla_put.cpp
tests/unit/test_support/: mock_classes.h
(+208 files in other folders)
